--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,7 @@ flutter:
     - assets/images/books/4.png
     - assets/images/books/5.jpg
     - assets/images/books/6.jpg
+    - assets/books/
 
 
   
